--- a/.github/workflows/dockerimage_version_maintain.yml
+++ b/.github/workflows/dockerimage_version_maintain.yml
@@ -18,6 +18,10 @@ on:
         default: true  # Default to true to ensure there's always a version increment
         type: boolean
 
+permissions:
+  id-token: write   # This is required for requesting the JWT
+  contents: read    # This is required for actions/checkout
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
