--- a/.github/workflows/dockerimage_version_maintain.yml
+++ b/.github/workflows/dockerimage_version_maintain.yml
@@ -30,7 +30,7 @@ jobs:
         uses: actions/checkout@v3
         
       - name: configure aws credentials
-        uses: aws-actions/configure-aws-credentials@e3dd6a429d7300a6a4c196c26e071d42e034350
+        uses: aws-actions/configure-aws-credentials@3
         with:
           role-to-assume: arn:aws:iam::490004655425:role/test-oidc
           role-session-name: githuboidconnect
