--- a/.github/workflows/dockerimage_version_maintain.yml
+++ b/.github/workflows/dockerimage_version_maintain.yml
@@ -29,7 +29,7 @@ jobs:
         uses: actions/checkout@v3
         
       - name: configure aws credentials
-        uses: aws-actions/configure-aws-credentials@3
+        uses: aws-actions/configure-aws-credentials@v3
         with:
           role-to-assume: arn:aws:iam::490004655425:role/test-oidc
           role-session-name: githuboidconnect
