--- a/.github/workflows/dockerimage_version_maintain.yml
+++ b/.github/workflows/dockerimage_version_maintain.yml
@@ -28,12 +28,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
         
-      - name: configure aws credentials
+      - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v3
         with:
           role-to-assume: arn:aws:iam::490004655425:role/test-oidc
           role-session-name: githuboidconnect
           aws-region: ${{ secrets.AWS_REGION }}
+          audience: sts.amazonaws.com
+
 
       # - name: Configure AWS credentials
       #   uses: aws-actions/configure-aws-credentials@v3
