--- a/.github/workflows/dockerimage_version_maintain.yml
+++ b/.github/workflows/dockerimage_version_maintain.yml
@@ -19,7 +19,8 @@ on:
         type: boolean
 
 permissions:
-  id-token: write   # This is required for requesting the JWT
+  id-token: write     # Enables OIDC
+  contents: read
 
 jobs:
   build-and-deploy:
